--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Discover how genetic testing is revolutionizing psychiatry by enabling truly personalized medication plans, faster recovery, and fewer side effects.">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://myndworkspsychiatry.com/blog/how-genetic-testing-transforms-psychiatry.html" />
+    <link rel="canonical" href="https://genetic-testing-transforms-psychiat.vercel.app" />
+    <meta name="google-site-verification" content="_-5m1Bnev0ty95IVh3slmk__VwsVbXVaZ5W_-UvKdN8" />
     <title>How Genetic Testing is Transforming Modern Psychiatry | Mynd Works</title>
 
     <!-- Open Graph -->
